# webmidi-launchkey-mini

./: .gitignore  README.md  index.html  note-player.js  oscilloscope.js  package-lock.json  package.json  rust-synth-processor.js
rust-synth/: Cargo.toml
rust-synth/src/: lib.rs
