[package]
name = "rust-synth"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = { version = "0.1.7", optional = true }
web-sys = { version = "0.3", features = [
    "AudioWorkletProcessor",
    "AudioWorkletGlobalScope",
    "AudioParamMap",
    "AudioProcessingEvent",
    "MessageEvent",
    "console",
]}

[profile.release]
lto = true
